--- a/index.Rmd
+++ b/index.Rmd
@@ -37,9 +37,17 @@ This tutorial by Christopher Paciorek of the UC Berkeley Statistical Computing F
 
 The simplest way to use a database is with SQLite, a lightweight database engine under which the database is stored simply in a single file.
 
-Both R and Python can easily interact with an SQLite database. For R you'll need the "DBI" and "RSQLite" packages. For Python you'll need the `sqlite3` package.
+Both R and Python can easily interact with an SQLite database. For R you'll need the `RSQLite` package. For Python you'll need the `sqlite3` package.
 
-#### 1.2.2 Using PostgreSQL on Mac or Windows
+One thing to note is that SQLite does not have some useful functionality that other databas management systems have. For example, you can't use `ALTER TABLE` to modify column types or drop columns.
+
+#### 1.2.2 DuckDB as a faster alternative to SQLite
+
+DuckDB is another lightweight database engine under which the database is stored simply in a single file. It stores data column-wise, which can lead to big speedups when doing queries operating on large portions of tables (so-called "online analytical processing" (OLAP)).
+
+Both R and Python can easily interact with a DuckDB database. For R you'll need the `duckdb` R package. For Python you'll need the `duckdb` Python package.
+
+#### 1.2.3 Using PostgreSQL on Mac or Windows
 
 To replicate the (non-essential) PostgreSQL administration portion of this tutorial, you'll need access to a machine on which you can run a PostgreSQL server. While there are a variety of ways to do this, this tutorial assumes that you are running PostgreSQL on an Ubuntu (or Debian) Linux machine. If you are a Windows or Mac user, there are several options for accessing a Linux environment:
 
@@ -82,7 +90,6 @@ Basically, standard SQL databases are *relational* databases that are a collecti
 
 One principle of databases is that if a set of fields contain duplicated information about a given category, you can more efficiently store information about each level of the category in a separate table. Consider information about people living in a state and information about each state - you don't want to include variables that only vary by state in the table containing information about individuals (at least until you're doing the actual analysis that needs the information in a single table). Or consider students nested within classes nested within schools.
 
-
 Databases are set up to allow for fast querying and merging (called joins in database terminology). 
 
 You can interact with databases in a variety of database systems (DBMS=database management system). Some popular systems are SQLite, MySQL, PostgreSQL, Oracle and Microsoft Access. We'll concentrate on accessing data in a database rather than management of databases. SQL is the Structured Query Language and is a special-purpose high-level language for managing databases and making queries. Variations on SQL are used in many different DBMS.
@@ -95,11 +102,13 @@ There are often multiple ways to interact with a DBMS, including directly using 
 
 #### 3.1.1 Relational Database Management Systems (DBMS)
 
-There are a variety of relational database management systems (DBMS). Some that are commonly used by the intended audience of this tutorial are SQLite, PostgreSQL, and mySQL. We'll concentrate on SQLite (because it is simple to use on a single machine) and PostgreSQL (because is is a popular open-source DBMS that is a good representative of a client-server model and has some functionality that SQLite lacks).
+There are a variety of relational database management systems (DBMS). Some that are commonly used by the intended audience of this tutorial are SQLite, PostgreSQL, and mySQL. We'll concentrate on SQLite and DuckDB (because they are simple to use on a single machine) and PostgreSQL (because is is a popular open-source DBMS that is a good representative of a client-server model and has some functionality that SQLite lacks).
 
-SQLite is quite nice in terms of being self-contained - there is no server-client model, just a single file on your hard drive that stores the database and to which you can connect to using the SQLite shell, R, Python, etc.  However, it does not have some useful functionality that other DBMS have. For example, you can't use `ALTER TABLE` to modify column types or drop columns. 
+#### 3.1.2 Serverless DBMS
 
-#### 3.1.2 NoSQL databases
+SQLite and DuckDB are quite nice in terms of being self-contained - there is no server-client model, just a single file on your hard drive that stores the database. There is no database process running on the computer; rather SQLite or DuckDB are embedded within the host process (e.g., Python or R). (There are also command line interfaces (CLI) for both SQLite and DuckDB that you can start from the command line/terminal.)
+
+#### 3.1.3 NoSQL databases
 
 NoSQL (not only SQL) systems have to do with working with datasets that are not handled well in traditional DBMS, and not specifically about the use or non-use of SQL itself. In particular data might not fit well within the rectangular row-column data model of one or more tables in a database. And one might be in a context where a full DBMS is not needed. Or one might have more data or need faster responses than can be handled well by standard DBMS.
 
@@ -111,6 +120,16 @@ Some NoSQL systems include
  - key-value storage systems (e.g., with data stored as pairs of keys (i.e., ids) and values, such as in JSON),
  - document storage systems (like key-value systems but where the value is a document), and
  - graph storage systems (e.g., for social networks). 
+
+#### Databases in the cloud
+
+The various big cloud computing providers (AWS, Google Cloud Platform (GCP), Azure) provide a dizzying array of different database-like services. Here are some examples.
+
+- *Online database hosting services* allow you to host databases (e.g., PostgreSQL databases) the infrastructure of a cloud provider. You basically manage the database in the cloud instead of on a physical machine. One example is Google Cloud SQL.
+- *Data warehouses* such as Google BigQuery and Amazon RedShift allow you to create a data repository in which the data are structured like in a database (tables, fields, etc.), stored in the cloud, and queried efficiently (and in parallel) using the cloud provider's infrastructure). Storage is by column, which allows for efficient queries when doing queries operating on large portions of tables.
+- *Data lakes* store data in a less structured way in cloud storage in files (e.g., CSV, parquet, etc.) that generally have common structure. The data can be queried without creating an actual database or data warehouse.
+
+Google's BigQuery has the advantages of not requiring a lot of administration/configuration while allowing your queries to take advantage of a lot of computing power. BigQuery will determine how to run a query in parallel across multiple (virtual) cores. A demonstration of using BigQuery for this tutorial is under construction. 
 
 ### 3.2 SQL 
 
@@ -221,11 +240,9 @@ Some examples of foreign keys would be:
 
 ## 5 Stack Overflow example database
 
-I've obtained data from [Stack Overflow](https://stackoverflow.com), the popular website for asking coding questions, and placed it into a normalized database. The SQLite version (also in CSVs as one CSV per table) has metadata (i.e., it lacks the actual text of the questions and answers) on all of the questions and answers posted in 2021.
+I've obtained data from [Stack Overflow](https://stackoverflow.com), the popular website for asking coding questions, and placed it into a normalized database. We'll explore SQL functionality using this example database, which has metadata (i.e., it lacks the actual text of the questions and answers) on all of the questions and answers posted in 2021.
 
-We'll explore SQL functionality using this example database. 
-
-Now let's consider the Stack Overflow data. Each question may have multiple answers and each question may have multiple (topic) tags.
+Let's consider the Stack Overflow data. Each question may have multiple answers and each question may have multiple (topic) tags.
 
 If we tried to put this into a single table, the fields could look like this if we have one row per question:
 
@@ -277,10 +294,15 @@ Most of our examples of making SQL queries on a database will be done from R, bu
 
 ### 6.1 Using SQL from R
 
-The *DBI* package provides a front-end for manipulating databases from a variety of DBMS (SQLite, MySQL, PostgreSQL, among others).
+The *DBI* package provides a front-end for manipulating databases from a variety of DBMS (SQLite, DuckDB, MySQL, PostgreSQL, among others).
 Basically, you tell the package what DBMS is being used on the back-end, link to the actual database, and then you can use the standard functions in the package regardless of the back-end.
 
-With SQLite, R processes make calls against the stand-alone SQLite database (.db) file, so there are no SQLite-specific processes. With PostgreSQL, R processes call out to separate Postgres processes; these are started from the overall Postgres background process
+With SQLite and DuckDB, R processes make calls against the stand-alone SQLite database (.db or .duckdb) file, so there are no SQLite-specific processes. With PostgreSQL, R processes call out to separate Postgres processes; these are started from the overall Postgres background process.
+
+Apart from the different manner of connecting, all of the queries below are the same regardless of whether the back-end DBMS is SQLite, DuckDB, PostgreSQL, etc.
+
+
+#### 6.1.1 SQLite
 
 You can access and navigate an SQLite database from R as follows.
 
@@ -321,6 +343,23 @@ To disconnect from the database:
 dbDisconnect(db)
 ```
 
+#### 6.1.2 DuckDB
+
+You can access and navigate an DuckDB database from R as follows.
+
+
+```{r, eval=TRUE}
+library(duckdb)
+drv <- duckdb()
+dir <- 'data' # relative or absolute path to where the .db file is
+dbFilename <- 'stackoverflow-2021.duckdb'
+db <- dbConnect(drv, dbname = file.path(dir, dbFilename))
+# simple query to get 5 rows from a table
+dbGetQuery(db, "select * from questions limit 5")  
+```
+
+#### 6.1.3 PostgreSQL
+
 To access a PostgreSQL database instead, you can do the following, assuming the database has been created and you have a username and password that allow you to access the particular database.
 
 ```{r, eval=FALSE}
@@ -331,11 +370,12 @@ db <- dbConnect(drv, dbname = 'stackoverflow', user = 'paciorek', password = 'te
 dbGetQuery(db, "select * from questions limit 5")  
 ```
 
-Apart from the different manner of connecting, all of the queries above are the same regardless of whether the back-end DBMS is SQLite, PostgreSQL, etc.
 
 ### 6.2 Using SQL from Python
 
-For SQLite:
+
+#### 6.2.1 SQLite
+
 
 ```{python, eval=FALSE}
 import sqlite3 as sq
@@ -353,7 +393,19 @@ To disconnect:
 c.close()
 ```
 
-Here's how you would connect to PostgreSQL instead:
+#### 6.2.2 DuckDB
+
+```{python, eval=FALSE}
+import duckdb
+dir = 'data' # relative or absolute path to where the .duckdb file is
+dbFilename = 'stackoverflow-2021.duckdb'
+import os
+db = duckdb.connect(os.path.join('data', dbFilename))
+db.sql("select * from questions limit 5")
+```
+
+#### 6.2.3 PostgreSQL
+
 
 ```{python, eval = FALSE}
 import psycopg2 as pg
