--- a/R-and-Python.Rmd
+++ b/R-and-Python.Rmd
@@ -266,6 +266,13 @@ One can use [dplyr syntax to work with data in the Arrow data structures](https:
 
 I haven't investigated it, but [Polars](https://pola-rs.github.io/polars-book/user-guide/index.html) is advertized as a very fast in-memory package for working with dataframes that provides a Python interface. It uses the Arrow columnar format. It also provides a lazy execution model like Spark or Dask that allows for automatic optimization of queries.
 
+## 3.5 DuckDB
+
+With DuckDB, you can run queries against existing R and Python data frames and Arrow objects, without having to copy the data or import it into an actual database.
+
+In R, use the `duckdb_register` and `duckdb_register_arrow` functions to 'register' the data frame or Arrow data source.
+
+For Python, see the example syntax in the DuckDB documentation to query Pandas and Polars data frames and Arrow objects.
 
 # 4 Working with large datasets on disk
 
@@ -284,9 +291,14 @@ wikiDF <- readr::read_table(file = pipe("gzip -cd data/part-0000?.gz"),
         col_types = c('nnccnn'))
 ```
 
+## 4.1 DuckDB
+
+With DuckDB, with some file formats (e.g., CSV, Parquet), you can run queries on files on disk without reading the entire dataset into memory.
+
+Alternatively, you can read the data from files on disk into a DuckDB database without storing all the data in memory, and then run queries against the database you've created.
 
 
-## 4.1 Arrow
+## 4.2 Arrow
 
 The *arrow* package allows you to read and write from datasets stored as one or (often) more files in various formats, including:
 
@@ -302,7 +314,7 @@ There's a [nice vignette](https://cran.r-project.org/web/packages/arrow/vignette
 
 The *PyArrow* package is available for Python, but I haven't explored it.
 
-## 4.2 fst
+## 4.3 fst
 
 The *fst* package for R provides the ability to quickly read and write data frames in parallel from data stored on disk in the efficient fst format. A key feature in terms of reducing memory use  is that data can be quickly accessed by column or by row (O(1) lookup), allowing one to easily subset the data when reading, rather than reading the entire dataset into memory, which is what would otherwise happen.
 
@@ -322,9 +334,9 @@ system.time(wikiDF <- read_fst(file.path('/tmp','data.fst')))  ## 8.4 seconds
 
 The 8 seconds to read the data compares to 55 seconds to read the data from the gzipped files via a connection using `readr::read_table` and 29 seconds via `data.table::fread`. 
 
-## 4.3 Additional packages in R (ff, LaF, bigmemory)
+## 4.4 Additional packages in R (ff, LaF, bigmemory)
 
-### 4.3.1 ff
+### 4.4.1 ff
 
 ff stores datasets in columnar format, with one file per column, on disk, so is not limited by memory (with the caveat below). It then provides fast access to the dataset from R.
 
@@ -371,7 +383,7 @@ Note that `ff` stores factor levels *in memory*, so if one has many factor level
 
 Also, I've encountered problems when there are more than about 1000 columns because each column is a separate file and there can be limitations in R on how many files it has open at once.
 
-### 4.3.2 LaF package
+### 4.4.2 LaF package
 
 The LaF package is designed to quickly read in data from CSV and FWF (fixed-width format) input files, efficiently handling cases where you only want some of the rows or columns. It requires unzipped text files as input, so one can't unzip input files on the fly via piping.
 
@@ -386,7 +398,7 @@ sub <- datLaf[dat$count[] == 635,]
 
 If you run this you'll see that the `laf_open_csv` took no time, indicating LaF is using lazy evaluation.
 
-### 4.3.3 bigmemory for matrices
+### 4.4.3 bigmemory for matrices
 
 `bigmemory` is similar to ff in providing the ability to load datasets into R without having
 them in memory, but rather stored in clever ways on disk that allow for fast access.
@@ -400,7 +412,7 @@ access the matrix stored on disk.
 The `biglm` package provides the ability to fit linear models and GLMs to big datasets, with
 integration with ff and bigmemory.
 
-## 4.4 Strategies in Python
+## 4.5 Strategies in Python
 
 Python provides a variety of packages and approaches you can use
 to avoid reading large datasets fully into memory. Here is a brief
@@ -412,14 +424,14 @@ overview of a few approaches:
 See [here](https://pythonspeed.com/articles/mmap-vs-zarr-hdf5) for more discussion of accessing data on disk from Python.
 
 
-## 4.5 Online (batch) processing of data in R and Python
+## 4.6 Online (batch) processing of data in R and Python
 
 Another approach is to manually process the data in batches, only reading in chunks of data that can fit in memory before doing some computation or writing back out to disk and then reading in the next chunk. When taking this approach, you want to ensure that the code you are using will be able to skip directly to the point in the file where it should read the next chunk of data from (randomly accessing memory) rather than reading all the data up to the point of interest and simply discarding the initial data.
 
 Not surprisingly there is a ton more functionality than shown below (in both Python and R) for reading chunks from files as well as skipping ahead in a file via a file connection or stream. 
 
 
-### 4.5.1 Online processing in R
+### 4.6.1 Online processing in R
 
 In R, various input functions can read in a subset of a file or can skip ahead. In general the critical step is to use a *connection* rather than directly opening the file, as this will allow one to efficiently read the data in in chunks.
 
@@ -460,7 +472,7 @@ system.time(dat4r <- read_csv(fn, n_max = 100000, skip = 1000001, col_names = FA
 
 Note that `read_csv` can handle zipped inputs, but does not handle a standard text file connection. 
 
-### 4.5.2 Online processing in Python
+### 4.6.2 Online processing in Python
 
 Pandas' `read_csv` has similar functionality in terms of reading a fixed number of rows and skipping rows, and it can decompress zipped files on the fly. 
 
