--- a/R-and-Python.Rmd
+++ b/R-and-Python.Rmd
@@ -17,9 +17,9 @@ We'll start with a refresher on data frames in R and Python and some discussion 
 The CSV files for the 2016 Stack Overflow data and the space-delimited files for the Wikipedia traffic data used in the examples below can be obtained [here](http://www.stat.berkeley.edu/share/paciorek/tutorial-databases-data.zip).
 
 
-# 1 Data frames in R and Python
+## 1 Data frames in R and Python
 
-## 1.1 Data frames in R
+### 1.1 Data frames in R
 
 A data frame in R is essentially the same as a table in SQL. The notion of a data frame has been essential to the success of R and its existence inspired Python's Pandas package.
 
@@ -41,7 +41,7 @@ joined <- merge(users, questions, by.x = 'userid', by.y = 'ownerid',
     all.x = FALSE, all.y = FALSE)  # inner join
 ```
 
-## 1.2 Using SQL syntax with R data frames: `sqldf`
+### 1.2 Using SQL syntax with R data frames: `sqldf`
 
 The *sqldf* package provides the ability to use SQL queries on R data frames (via `sqldf`) and on-the-fly when reading from CSV files (via `read.csv.sql`). The latter can help you avoid reading in the entire dataset into memory in R if you just need a subset of it.
 
@@ -65,7 +65,7 @@ oldUsers <- read.csv.sql(file.path('data', 'users-2016.csv'),
       dbname = tempfile(), header = TRUE)
 ```
 
-## 1.3 Data frames in Python
+### 1.3 Data frames in Python
 
 The Pandas package has nice functionality for doing dataset manipulations akin to SQL queries including group by/aggregation operations, using a data structure called a DataFrame inspired by R's data frames. Furthermore, Pandas was designed from the start for computational efficiency, in contrast to standard data frames in R (but see below for newer R functionality that is much more efficient). 
 
@@ -85,13 +85,13 @@ joined = pd.merge(users, questions, how= 'inner', left_on= 'userid',
         right_on = 'ownerid')
 ```
 
-## 1.4 Distributed data frames in Dask in Python
+### 1.4 Distributed data frames in Dask in Python
 
 The Dask package provides the ability to divide data frames across multiple workers (and across nodes), allowing one to handle very large datasets, as discussed in [this tutorial](https://berkeley-scf.github.io/tutorial-dask-future/python-dask#4-dask-distributed-datastructures-and-automatic-parallel-operations-on-them).
 
-# 2 dplyr in R
+## 2 dplyr in R
 
-## 2.1 Overview
+### 2.1 Overview
 
 dplyr is part of the [tidyverse](http://tidyverse.org/), a set of R packages spearheaded by Hadley Wickham. You can think of dplyr as providing the functionality of SQL (selecting columns, filtering rows, transforming columns, aggregation, and joins) on R data frames using a clean syntax that is easier to use than base R operations.
 
@@ -108,7 +108,7 @@ result <- filter(users, age > 75)             # filter by row (i.e., SQL WHERE)
 dim(result)
 ```
 
-## 2.2 Piping
+### 2.2 Piping
 
 dplyr is often combined with piping, which allows you to build up a sequence of operations (from left to right), as if you were using UNIX pipes or reading a series of instructions. Here's a very simple example where we combine column selection and filtering in a readable way:
 
@@ -134,7 +134,7 @@ identical(result, result3)
 
 We'll use pipes in the remainder of the dplyr examples.
 
-## 2.3 Functionality
+### 2.3 Functionality
 
 Here's how one can do stratified analysis with aggregation operations. In the dplyr world, this is known as split-apply-combine but in the SQL world this is just a GROUP BY with some aggregation operation.
 
@@ -166,7 +166,7 @@ The join functions include `inner_join`, `left_join`, `right_join`, `full_join`.
 
 In addition to operating directly on data frames, dplyr can also operate on databases and data.table objects as the back-end storage, as we'll see next.
 
-## 2.4 Cautionary notes
+### 2.4 Cautionary notes
 
 Note that dplyr and other packages in the tidyverse use a modified form of data frames. In some cases you may want to convert back to a standard data frame using `as.data.frame`. For example:
 
@@ -183,7 +183,7 @@ myfun <- function(df, colname)
 myfun(questions, 'age')
 ```
 
-## 2.5 dplyr with SQL and databases
+### 2.5 dplyr with SQL and databases
 
 We can connect to an SQLite or Postgres database  and then query it using dplyr syntax:
 
@@ -198,9 +198,9 @@ head(oldFolks)
 
 > **Note**: dplyr uses lazy evaluation when interfacing with databases -- it only does the query and return results when the results are needed (in this case when we call `head`).
 
-# 3 Manipulating datasets quickly in memory 
+## 3 Manipulating datasets quickly in memory 
 
-## 3.1 `data.table` in R
+### 3.1 `data.table` in R
 
 The *data.table* package provides a lot of functionality for fast manipulation of datasets in memory. data.table can do the standard SQL operations such as indexing, merges/joins, assignment, grouping, etc. Plus data.table objects are data frames (i.e., they inherit from data frames) so they are compatible with R code that uses data frames.
 
@@ -235,7 +235,7 @@ system.time(sub2 <- wikiDT[.(512), ]) # essentially instantaneous
 data.table has a lot of functionality and can be used to do a variety of sophisticated queries and manipulations (including aggregation operations), but it has its own somewhat involved syntax and concepts. The above just scratches the surface of what you can do with it. 
 
 
-## 3.2 Using dplyr syntax with data.table in R
+### 3.2 Using dplyr syntax with data.table in R
 
 Rather than learning the data.table syntax, one can also use dplyr syntax with data.table objects.
 
@@ -254,7 +254,7 @@ system.time(sub <- wikiDT2 %>% filter(count == 512)) # 0.1 sec.
 
 Finally the `tidytable` package also allows you to use dplyr syntax as well as other tidyverse syntax, such as `tidyr` functions. 
 
-## 3.3 Arrow
+### 3.3 Arrow
 
 Apache Arrow provides efficient data structures for working with data in memory, usable in R via the `arrow` package and the `PyArrow` package in Python. Data are stored by column, with values in a column stored sequentially and in such a way that one can access a specific value without reading the other values in the column (O(1) lookup).
 
@@ -262,19 +262,19 @@ Arrow is designed to read data from various file formats, including Parquet, nat
 
 One can use [dplyr syntax to work with data in the Arrow data structures](https://cran.r-project.org/web/packages/arrow/vignettes/dataset.html).
 
-## 3.4 Polars dataframes in Python
+### 3.4 Polars dataframes in Python
 
 I haven't investigated it, but [Polars](https://pola-rs.github.io/polars-book/user-guide/index.html) is advertized as a very fast in-memory package for working with dataframes that provides a Python interface. It uses the Arrow columnar format. It also provides a lazy execution model like Spark or Dask that allows for automatic optimization of queries.
 
-## 3.5 DuckDB
+### 3.5 DuckDB
 
 With DuckDB, you can run queries against existing R and Python data frames and Arrow objects, without having to copy the data or import it into an actual database.
 
 In R, use the `duckdb_register` and `duckdb_register_arrow` functions to 'register' the data frame or Arrow data source.
 
-For Python, see the example syntax in the DuckDB documentation to query Pandas and Polars data frames and Arrow objects.
+For Python, see the [example syntax in the DuckDB documentation](https://duckdb.org/docs/api/python/data_ingestion#dataframes--arrow-tables) to query Pandas and Polars data frames and Arrow objects.
 
-# 4 Working with large datasets on disk
+## 4 Working with large datasets on disk
 
 There are a variety of packages in R that allow you to work with very large datasets on disk without loading them fully into memory. Some of these are also very good at compressing files to reduce disk storage.
 
@@ -291,14 +291,14 @@ wikiDF <- readr::read_table(file = pipe("gzip -cd data/part-0000?.gz"),
         col_types = c('nnccnn'))
 ```
 
-## 4.1 DuckDB
+### 4.1 DuckDB
 
 With DuckDB, with some file formats (e.g., CSV, Parquet), you can run queries on files on disk without reading the entire dataset into memory.
 
 Alternatively, you can read the data from files on disk into a DuckDB database without storing all the data in memory, and then run queries against the database you've created.
 
 
-## 4.2 Arrow
+### 4.2 Arrow
 
 The *arrow* package allows you to read and write from datasets stored as one or (often) more files in various formats, including:
 
@@ -314,7 +314,7 @@ There's a [nice vignette](https://cran.r-project.org/web/packages/arrow/vignette
 
 The *PyArrow* package is available for Python, but I haven't explored it.
 
-## 4.3 fst
+### 4.3 fst
 
 The *fst* package for R provides the ability to quickly read and write data frames in parallel from data stored on disk in the efficient fst format. A key feature in terms of reducing memory use  is that data can be quickly accessed by column or by row (O(1) lookup), allowing one to easily subset the data when reading, rather than reading the entire dataset into memory, which is what would otherwise happen.
 
@@ -334,9 +334,9 @@ system.time(wikiDF <- read_fst(file.path('/tmp','data.fst')))  ## 8.4 seconds
 
 The 8 seconds to read the data compares to 55 seconds to read the data from the gzipped files via a connection using `readr::read_table` and 29 seconds via `data.table::fread`. 
 
-## 4.4 Additional packages in R (ff, LaF, bigmemory)
+### 4.4 Additional packages in R (ff, LaF, bigmemory)
 
-### 4.4.1 ff
+#### 4.4.1 ff
 
 ff stores datasets in columnar format, with one file per column, on disk, so is not limited by memory (with the caveat below). It then provides fast access to the dataset from R.
 
@@ -375,7 +375,7 @@ You can look at the ff and ffbase packages to see what functions are available u
 table.ff(wikiff$hour)
 ```
 
-#### Miscellanea
+##### Miscellanea
 
 Note that a copy of an ff object appears to be a shallow copy: if you modify the copy it will change the data in the original object.
 
@@ -383,7 +383,7 @@ Note that `ff` stores factor levels *in memory*, so if one has many factor level
 
 Also, I've encountered problems when there are more than about 1000 columns because each column is a separate file and there can be limitations in R on how many files it has open at once.
 
-### 4.4.2 LaF package
+#### 4.4.2 LaF package
 
 The LaF package is designed to quickly read in data from CSV and FWF (fixed-width format) input files, efficiently handling cases where you only want some of the rows or columns. It requires unzipped text files as input, so one can't unzip input files on the fly via piping.
 
@@ -398,7 +398,7 @@ sub <- datLaf[dat$count[] == 635,]
 
 If you run this you'll see that the `laf_open_csv` took no time, indicating LaF is using lazy evaluation.
 
-### 4.4.3 bigmemory for matrices
+#### 4.4.3 bigmemory for matrices
 
 `bigmemory` is similar to ff in providing the ability to load datasets into R without having
 them in memory, but rather stored in clever ways on disk that allow for fast access.
@@ -412,7 +412,7 @@ access the matrix stored on disk.
 The `biglm` package provides the ability to fit linear models and GLMs to big datasets, with
 integration with ff and bigmemory.
 
-## 4.5 Strategies in Python
+### 4.5 Strategies in Python
 
 Python provides a variety of packages and approaches you can use
 to avoid reading large datasets fully into memory. Here is a brief
@@ -424,14 +424,14 @@ overview of a few approaches:
 See [here](https://pythonspeed.com/articles/mmap-vs-zarr-hdf5) for more discussion of accessing data on disk from Python.
 
 
-## 4.6 Online (batch) processing of data in R and Python
+### 4.6 Online (batch) processing of data in R and Python
 
 Another approach is to manually process the data in batches, only reading in chunks of data that can fit in memory before doing some computation or writing back out to disk and then reading in the next chunk. When taking this approach, you want to ensure that the code you are using will be able to skip directly to the point in the file where it should read the next chunk of data from (randomly accessing memory) rather than reading all the data up to the point of interest and simply discarding the initial data.
 
 Not surprisingly there is a ton more functionality than shown below (in both Python and R) for reading chunks from files as well as skipping ahead in a file via a file connection or stream. 
 
 
-### 4.6.1 Online processing in R
+#### 4.6.1 Online processing in R
 
 In R, various input functions can read in a subset of a file or can skip ahead. In general the critical step is to use a *connection* rather than directly opening the file, as this will allow one to efficiently read the data in in chunks.
 
@@ -472,7 +472,7 @@ system.time(dat4r <- read_csv(fn, n_max = 100000, skip = 1000001, col_names = FA
 
 Note that `read_csv` can handle zipped inputs, but does not handle a standard text file connection. 
 
-### 4.6.2 Online processing in Python
+#### 4.6.2 Online processing in Python
 
 Pandas' `read_csv` has similar functionality in terms of reading a fixed number of rows and skipping rows, and it can decompress zipped files on the fly. 
 
