fix some formatting for new bigquery section

--- a/bigquery.Rmd
+++ b/bigquery.Rmd
@@ -106,11 +106,13 @@ sql <- "select * from tags order by count desc limit 20"
 dbGetQuery(db, sql)
 ```
 
-## 2.3 Getting data into BigQuery
+Instructions for Python are in preparation.
+
+## 3 Getting data into BigQuery
 
 Next, let's demonstrate setting up a BigQuery data warehouse, using the Wikipedia data (used in the [database management demos](db-managment)) as an example. Recall that we have data to populate a single table from multiple space-delimited flat text files, all of them in exactly the same format in terms of columns.
 
-### 2.3.1 Loading from a local file via the BigQuery web interface
+### 3.1 Loading from a local file via the BigQuery web interface
 
 We can load from a local file on our computer using `Add Data`, or we can load from files already present in Google Cloud Storage.
 
@@ -146,7 +148,7 @@ dbGetQuery(db, sql)
 
 It worked!
 
-### 2.3.2 Loading from multiple files in Google Cloud Storage
+### 3.2 Loading from multiple files in Google Cloud Storage
 
 Now let's load multiple files all at once from Google Cloud Storage (GCS).
 
@@ -175,7 +177,7 @@ dbGetQuery(db, sql)
 ```
 
 
-### 2.3.3 Permissions
+### 3.3 Permissions
 
 I did this using my Google Cloud account, which is an owner of the GCP account and so has various BigQuery permissions already set to allow various actions, including creating or modifying BigQuery datasets.
 
