minor heading change in biqquery.Rmd

--- a/bigquery.Rmd
+++ b/bigquery.Rmd
@@ -112,7 +112,7 @@ Instructions for Python are in preparation.
 
 Next, let's demonstrate setting up a BigQuery data warehouse, using the Wikipedia data (used in the [database management demos](db-managment)) as an example. Recall that we have data to populate a single table from multiple space-delimited flat text files, all of them in exactly the same format in terms of columns.
 
-### 3.1 Loading from a local file via the BigQuery web interface
+### 3.1 Loading a local file
 
 We can load from a local file on our computer using `Add Data`, or we can load from files already present in Google Cloud Storage.
 
@@ -148,7 +148,7 @@ dbGetQuery(db, sql)
 
 It worked!
 
-### 3.2 Loading from multiple files in Google Cloud Storage
+### 3.2 Loading from Google Cloud Storage
 
 Now let's load multiple files all at once from Google Cloud Storage (GCS).
 
